# opengl_hello_world

./: .gitignore  CMakeLists.txt  README.md
draw_circle_with_triangle_fan/: Makefile.tp  main.cpp
draw_cube/: Makefile.tp  main.cpp
draw_hollow_circle/: Makefile.tp  main.cpp
draw_line_strip_and_loop/: Makefile.tp  draw_line_strip_and_loop  main.cpp  nop-CMakeLists.txt
draw_point/: Makefile.tp  main.cpp
draw_quad_strip/: Makefile.tp  main.cpp
draw_segment/: Makefile.tp  main.cpp
draw_triangle_fan/: Makefile.tp  main.cpp
draw_triangle_strip/: Makefile.tp  main.cpp
first_window/: CMakeLists.txt  Makefile.tp  first_window  main.cpp
modern_opengl/: Makefile.tp  main.cpp
triangle_color/: Makefile.tp  main.cpp
